styles-refactor: theme file split

--- a/src/index.css
+++ b/src/index.css
@@ -1,249 +1,5 @@
-/** Fonts */
-/* General Text: DM Sans */
-@import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap');
-/* Headings: Inter */
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap');
-/* Extra: Bebas Neue && Fira Sans */
-@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Fira+Sans:wght@700&display=swap');
-
-
-* {
-  box-sizing: border-box;
-}
-
-:root {
-  --font-base: 'DM Sans',
-    'Inter',
-    'Open Sans',
-    Verdana,
-    sans-serif;
-  --font-heading: 'Inter', 'Open Sans', "DM Sans", Ubuntu, Verdana, sans-serif;
-  --font-super: 'Bebas Neue', sans-serif;
-  --font-title: 'Fira Sans', 'Inter', sans-serif;
-  min-height: 100vh;
-  font-size: 20px;
-  line-height: 32px;
-  font-family: var(--font-base);
-  font-weight: 400;
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
-}
-
-:root {
-  --text-sm: 0.8rem;
-  --text-base: 1rem;
-  --text-lg: 1.2rem;
-  --text-xl: 1.4rem;
-  --text-2xl: 1.6rem;
-  --text-3xl: 2rem;
-  --text-4xl: 2.6rem;
-
-  --off-white: #FDFFEB;
-  --beige: #F4EEC7;
-  --orange: #FE9801;
-  --dark-orange: #AA6E16;
-  --brown: #765A31;
-  --lime: #CCDA46;
-  --olive: #697C37;
-  --forest: #33420B;
-  --off-black: #0F0F0F;
-  --gray: #4D4D4D;
-  --gray-lighter: #C3C3C3;
-  --gray-light: #909090;
-
-  --primary: var(--off-black);
-  --highlight-1: var(--orange);
-  --highlight-1-dark: var(--dark-orange);
-  --highlight-1-darker: var(--forest);
-  --highlight-1-darker: var(--brown);
-  --highlight-2:var(--lime);
-  --highlight-2-dark: var(--olive);
-  --neutral-lighter: var(--gray-lighter);
-  --neutral-light: var(--gray-light);
-  --neutral: var(--gray);
-  --background-highlight: var(--beige);
-  --background: var(--off-white);
-
-  --space-0: 8px;
-  --space-1: 12px;
-  --space-2: 16px;
-  --space-3: 20px;
-  --space-4: 32px;
-  --space-5: 52px;
-  --space-6: 84px;
-  --space-7: 136px;
-  --space-8: 220px;
-}
-
-/* @media (prefers-color-scheme: dark) {
-  :root {
-    
-  }
-} */
-
-body {
-  margin: 0;
-  padding: 0;
-  background-color: var(--background);
-  color: var(--primary);
-}
-
-p {
-  margin: 0;
-}
-
-h1, h2, h3, h4, h5, h6 {
-  line-height: normal;
-  font-family: var(--font-heading);
-  margin: 0;
-}
-
-h1 {
-  font-size: var(--text-3xl);
-  font-weight: 800;
-}
-
-.light-text {
-  color: var(--neutral-light);
-}
-
-h2 {
-  font-size: var(--text-2xl);
-  font-weight: 700;
-}
-
-h3 {
-  font-size: var(--text-lg);
-  font-weight: 700;
-}
-
-a {
-  text-decoration: none;
-  color: var(--dark-orange);
-  transition: color ease 150ms;
-}
-
-a:hover {
-  color: var(--orange);
-}
-
-button {
-  all: unset;
-  align-self: flex-end;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin: var(--space-2) 0;
-  height: var(--space-5);
-  padding: 0 var(--space-4);
-  font-family: var(--font-heading);
-  color: var(--neutral-lighter);
-  border: 2px solid var(--neutral);
-  border-radius: 28px;
-  font-size: var(--text-base);
-  font-weight: 500;
-  transition: border-color linear 150ms, color linear 150ms;
-}
-
-button:hover {
-  cursor: pointer;
-  border-color: var(--neutral-lighter);
-  color: var(--neutral);
-}
-
-button:focus {
-  outline-style: auto;
-}
-
-button:disabled {
-  background-color: var(--neutral-lighter);
-  color: var(--neutral);
-  border-color: var(--neutral-lighter);
-}
-
-.btn-highlight-1 {
-  background-color: var(--highlight-1);
-  color: var(--background);
-  font-weight: 700;
-  border:none;
-  transition: opacity linear 120ms;
-}
-.btn-highlight-1:hover {
-  opacity: 0.85;
-  color: var(--background);
-}
-
-.btn-highlight-2 {
-  background-color: var(--highlight-2-dark);
-  color: var(--background);
-  font-weight: 700;
-  border: none;
-  transition: all linear 120ms;
-  box-shadow: 0 0 0 var(--neutral-lighter);
-}
-
-.btn-highlight-2:hover {
-  transform: scale(103%);
-  color: var(--background);
-  box-shadow: 0 0 18px var(--neutral-lighter);
-}
-
-.btn-long {
-  min-width: 12rem;
-}
-
-input {
-  display: flex;
-  margin: 0;
-  padding: var(--space-3) var(--space-2);
-  height: var(--space-4);
-  font-size: var(--text-base);
-  color: var(--primary);
-  background-color: var(--background);
-  border: 2px solid var(--neutral-lighter);
-  border-radius: 8px;
-}
-
-label {
-  font-size: var(text-2xl);
-  font-weight: 800;
-}
-
-.input-description {
-  margin: 0;
-  line-height: var(--text-lg);
-  font-size: var(--text-sm);
-}
-
-.grid-container {
-  display: grid;
-  grid-template-columns: minmax(0, 1fr) min(1350px, 96%) minmax(0, 1fr);
-}
-
-.grid-container > * {
-  grid-column: 2;
-}
-
-.full-width {
-  grid-column: -1/1;
-}
-
-.two-columns {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-}
-
-.contain-center {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.flex-row {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-}
+/* theme global styles */
+@import "./theme/colors.module.css";
+@import "./theme/texts.module.css";
+@import "./theme/layout.module.css";
+@import './theme/buttons.module.css';
