--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,4 @@
 @import "./theme/texts.module.css";
 @import "./theme/layout.module.css";
 @import './theme/buttons.module.css';
+@import './theme/inputs.module.css';
