--- a/src/pages/Profile.module.css
+++ b/src/pages/Profile.module.css
@@ -37,5 +37,13 @@
 }
 
 .profilePreviewContainer {
+  max-width: 800px;
+  max-height: 500px;
   background-color: var(--neutral);
+}
+
+.textArea {
+  width: 600px;
+  height: 200px;
+  word-break: break-word;
 }
