styles-fix: Home css fix

--- a/src/pages/Home.module.css
+++ b/src/pages/Home.module.css
@@ -1,6 +1,14 @@
+.container {
+  flex: 1;
+  align-items: center;
+}
+
+.firstColumn {
+  max-width: 820px;
+}
+
 .superTitle {
-  margin-top: 20%;
-  margin-bottom: var(--space-2);
+  margin: 5vh 0 var(--space-2) 0;
   font-size: 3.2rem;
   font-family: var(--font-super);
 }
@@ -12,6 +20,15 @@
   font-family: var(--font-title);
   letter-spacing: -5;
 }
+
+.illustration {
+  min-width: min(96%, 440px);
+  max-width: 500px;
+}
+/* 
+.illustration > img { 
+  min-width: min(340px, 80%);
+} */
 
 .ctaButtonsContainer {
   margin: var(--space-4) 0;
