--- a/src/pages/Profile.module.css
+++ b/src/pages/Profile.module.css
@@ -44,4 +44,9 @@
   width: 600px;
   height: 200px;
   word-break: break-word;
+  font-size: var(--text-base);
+  color: var(--primary);
+  background-color: var(--background);
+  border: 2px solid var(--neutral-lighter);
+  border-radius: 8px;
 }
