styles: home page animations!

--- a/src/components/MainHeader.module.css
+++ b/src/components/MainHeader.module.css
@@ -52,6 +52,9 @@
   color: var(--highlight-1-darker);
   position: relative;
 }
+.nav a:hover {
+  color: var(--highlight-1-darker);
+}
 
 .underline::before {
   content: "";
