--- a/src/index.css
+++ b/src/index.css
@@ -5,3 +5,4 @@
 @import "./theme/buttons.module.css";
 @import "./theme/inputs.module.css";
 @import "./theme/dev.module.css";
+@import "./theme/animations.module.css";
