--- a/src/theme/layout.module.css
+++ b/src/theme/layout.module.css
@@ -10,6 +10,19 @@
   --space-8: 220px;
 }
 
+@media (max-width: 920px) {
+  :root {
+    --space-0: 4px;
+    --space-1: 6px;
+    --space-2: 8px;
+    --space-3: 10px;
+    --space-4: 16px;
+    --space-5: 26px;
+    --space-6: 42px;
+    --space-7: 68px;
+    --space-8: 110px;
+  }
+}
 
 * {
   box-sizing: border-box;
