--- a/src/theme/layout.module.css
+++ b/src/theme/layout.module.css
@@ -12,14 +12,15 @@
 
 @media (max-width: 920px) {
   :root {
+    --space-0: 5px;
     --space-1: 8px;
     --space-2: 12px;
-    --space-3: 16px;
+    --space-3: 20px;
     --space-4: 24px;
-    --space-5: 32px;
-    --space-6: 56px;
-    --space-7: 72px;
-    --space-8: 136px;
+    --space-5: 40px;
+    --space-6: 44px;
+    --space-7: 64px;
+    --space-8: 96px;
   }
 }
 
@@ -107,3 +108,9 @@ main > * {
     row-gap: 2rem;
   }
 } */
+
+@media (max-width: 920px) {
+  .grid-container {
+    grid-template-columns: 20px 1fr 20px;
+  }
+}
