--- a/src/pages/Profile.module.css
+++ b/src/pages/Profile.module.css
@@ -14,7 +14,10 @@
   display: flex;
   flex-direction: column;
   align-items: start;
+  justify-self: center;
   gap: var(--space-4);
+  align-self: end;
+  margin-bottom: 15%;
 }
 
 .firstColumn p {
