--- a/src/components/Profile/ProfileView.module.css
+++ b/src/components/Profile/ProfileView.module.css
@@ -6,7 +6,7 @@
 }
 
 .banner {
-  background-color: green;
+  background-color: var(--neutral-light);
   height: 8rem;
   margin-bottom: -3rem;
 }
@@ -24,6 +24,7 @@
 
 .ctaContainer button {
   margin: 0;
+  gap: 0.3rem;
   min-width: max-content;
 }
 
