--- a/src/theme/buttons.module.css
+++ b/src/theme/buttons.module.css
@@ -6,16 +6,16 @@ button {
   align-items: center;
 
   height: var(--space-5);
+  width: 12rem;
   margin: var(--space-2) 0;
-  padding: 0 var(--space-4);
+  padding: 0;
 
   font-family: var(--font-heading);
   font-size: var(--text-base);
   font-weight: 500;
-  color: var(--neutral-lighter);
-  
-  border: 2px solid var(--neutral);
-  border-radius: 28px;
+  color: var(--foreground);
+  border: 1px solid var(--neutral);
+  border-radius: 26px;
   
   transition: border-color linear 150ms, color linear 150ms;
 }
@@ -36,29 +36,40 @@ button:disabled {
   border-color: var(--neutral-lighter);
 }
 
-.btn-highlight-1 {
+.btn-1-normal {
   background-color: var(--highlight-1);
   color: var(--background);
-  font-weight: 700;
   border: none;
-  transition: filter linear 120ms;
+  transition: background-color linear 120ms;
 }
 
-.btn-highlight-1:hover {
-  filter: brightness(1.15);
+.btn-1-normal:hover {
+  background-color: #AA6E16;
   color: var(--background);
 }
 
-.btn-highlight-2 {
+.btn-1-outline {
+  background-color: transparent;
+  color: var(--highlight-1);
+  border: 1px solid var(--highlight-1);
+  transition: background-color linear 120ms;
+}
+
+.btn-1-outline:hover {
+  background-color: #AA6E16;
+  color: var(--background);
+}
+
+.btn-2-normal {
   background-color: var(--highlight-2-dark);
   color: var(--background);
-  font-weight: 700;
+  font-weight: 500;
   border: none;
   transition: all linear 120ms;
   box-shadow: 0 0 0 var(--neutral-lighter);
 }
 
-.btn-highlight-2:hover {
+.btn-2-normal:hover {
   filter: brightness(1.20);
   color: var(--background);
   box-shadow: 0 0 18px var(--neutral-lighter);
