--- a/src/theme/inputs.module.css
+++ b/src/theme/inputs.module.css
@@ -4,7 +4,7 @@ input {
   padding: var(--space-3) var(--space-2);
   height: var(--space-4);
   font-size: var(--text-base);
-  color: var(--primary);
+  color: var(--foreground);
   background-color: var(--background);
   border: 2px solid var(--neutral-lighter);
   border-radius: 8px;
