styles: buttons, inputs, margins updated

--- a/src/index.css
+++ b/src/index.css
@@ -6,3 +6,4 @@
 @import "./theme/inputs.module.css";
 @import "./theme/dev.module.css";
 @import "./theme/animations.module.css";
+@import "./theme/utils.module.css";
