--- a/src/theme/texts.module.css
+++ b/src/theme/texts.module.css
@@ -36,7 +36,15 @@
 }
 
 p {
-  margin: 0;
+  margin: 0.2rem 0;
+}
+
+.h-group {
+  line-height: normal;
+}
+
+strong {
+  font-weight: 600;
 }
 
 h1,
