--- a/src/components/MainHeader.module.css
+++ b/src/components/MainHeader.module.css
@@ -6,7 +6,7 @@
   justify-content: stretch;
   align-items: center;
   border-bottom: 1px solid var(--background-highlight);
-  margin-bottom: var(--space-4);
+  /* margin-bottom: var(--space-4); */
   box-shadow: 0 0 10px rgb(210, 210, 188);
 }
 
