--- a/src/components/Profile/ProfilePreview.module.css
+++ b/src/components/Profile/ProfilePreview.module.css
@@ -5,7 +5,7 @@
   align-items: center;
   justify-content: flex-end;
   background-color: #666;
-  max-height: min(780px, 100vh);
+  /* max-height: min(780px, 100vh); */
   min-height: min(100%, 720px);
   padding: 0 var(--space-0);
 }
