--- a/src/components/Profile/ProfileView.module.css
+++ b/src/components/Profile/ProfileView.module.css
@@ -1,8 +1,9 @@
 .container {
   background-color: var(--background);
   overflow-y: auto;
-  height: min(96%, 720px);
+  height: 96%;
   /* margin-bottom: auto; */
+  box-shadow: 0 0px 18px -3px rgba(0,0,0,0.30);
 }
 
 .banner {
