--- a/src/pages/Profile.module.css
+++ b/src/pages/Profile.module.css
@@ -20,51 +20,30 @@
   margin-bottom: 15%;
 }
 
-.firstColumn p {
+/* .firstColumn p {
   margin-bottom: var(--space-2);
-}
+} */
 
 .title {
-  margin: 0 0 var(--space-2) 0;
+  margin: 0 0 var(--space-0) 0;
 }
 
 .smallGap {
   gap: var(--space-3);
 }
 
-.btnNext {
-  position: relative;
-  width: 8rem;
-  margin-left: 4px;
-}
-
-.btnNext::after {
-  content: ">";
-  position: absolute;
-  right: 12%;
-}
-
-.btnPrevious {
-  position: relative;
-  width: 8rem;
-  margin-right: 4px;
-}
-
-.btnPrevious::before {
-  content: "<";
-  position: absolute;
-  left: 12%;
-}
-
 .textArea {
+  padding: 0.5rem;
+  font-family: inherit;
   width: 600px;
-  height: 200px;
+  height: 15ch;
   word-break: break-word;
   font-size: var(--text-base);
   color: var(--foreground);
   background-color: var(--background);
   border: 2px solid var(--neutral-lighter);
   border-radius: 8px;
+  resize: none;
 }
 
 .error {
