--- a/src/theme/inputs.module.css
+++ b/src/theme/inputs.module.css
@@ -3,7 +3,7 @@ input {
   margin: 0;
   padding: var(--space-3) var(--space-2);
   height: var(--space-4);
-  font-size: var(--text-base);
+  font-size: var(--text-sm);
   color: var(--foreground);
   background-color: var(--background);
   border: 2px solid var(--neutral-lighter);
@@ -16,7 +16,7 @@ label {
 }
 
 .input-description {
-  margin: 0;
+  margin: 0.2rem 0 0.5rem 0;
   line-height: var(--text-lg);
   font-size: var(--text-sm);
 }
