--- a/src/pages/Profile.module.css
+++ b/src/pages/Profile.module.css
@@ -35,7 +35,7 @@
 .textArea {
   padding: 0.5rem;
   font-family: inherit;
-  width: 600px;
+  width: 100%;
   height: 15ch;
   word-break: break-word;
   font-size: var(--text-base);
